<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/app_name"
        android:textColor="@color/color_text_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/login"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/loginInputView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_item"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textColor="@color/color_text_primary"
                android:textColorHint="@color/color_text_secondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/password"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passwordInputView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="4dp"
                android:inputType="textPassword"
                android:background="@drawable/bg_item"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textColor="@color/color_text_primary"
                android:textColorHint="@color/color_text_secondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnSignInView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bg_button_primary_enabled"
                android:fontFamily="@font/poppins_regular"
                android:stateListAnimator="@null"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progressView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/errorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/unable_to_sign_in"
            android:textColor="@color/color_danger"
            android:textSize="14sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>